增加了压缩等级的选项

--- a/设置.ini
+++ b/设置.ini
@@ -1,4 +1,7 @@
 [自定义]
 压缩密码=
+;（注释）【如果不需要分卷填0，单位为MB】
 分卷压缩大小=4000
-敏感词=凌辱，調教，奴隷，処女，魅惑，娼，淫，巨乳
+敏感词=凌辱，調教，奴隷，処女，魅惑，娼，淫，巨乳，奸，姦
+;（注释）【压缩等级填0-9：0仅储存，5标准压缩，9极限压缩】
+压缩等级=0
